# 2d_lighting

./: Cargo.toml  README.md
assets/textures/: entities.json  test.json  textures.json  tiles.json
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: camera.rs  deferred.wgsl  global_light.wgsl  input.rs  lib.rs  light.wgsl  main.rs  present.wgsl  renderer copy.rs  renderer.rs  shader.wgsl  texture.rs  texture_atlas.rs  window.rs
src/assets/: mod.rs
src/gfx/: context.rs  mod.rs  pipeline.rs
src/gfx/pass/: deferred_pass.rs  lighting_pass.rs  mod.rs  present_pass.rs
texture_packer/: Cargo.toml
texture_packer/src/: lib.rs  main.rs
