[package]
name = "row666_metroidbrainia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.16.1", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.11.3"
hecs = "0.10.5"
lazy_static = "1.5.0"
log = "0.4.22"
pollster = "0.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
wgpu = "0.20.1"
winit = { version = "0.29", features = ["rwh_06"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[profile.small]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 's'
strip = true
panic = "abort"

[workspace]
members = ["texture_packer"]