[package]
name = "texture_packer"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
image = "0.24.6"
regex = "1.9.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
